src/objects/Technical_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Affected_Part__c</fullName>
        <label>Affected Part</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_of_Vehicle__c</fullName>
        <label>Area of Vehicle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Symptom_Code_Related__c</fullName>
        <label>Symptom Code Related</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Technical Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Affected_Part__c</columns>
        <columns>Area_of_Vehicle__c</columns>
        <columns>Product__c</columns>
        <columns>Symptom_Code_Related__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Issue Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>